# coinbase-connector

./: .gitignore  Cargo.toml  Dockerfile  README.md  subscriptions.json
src/: coinbase.rs  controller.rs  lib.rs  main.rs  marketdata.rs  websocket.rs
src/coinbase/: api.rs  coinbase_api.rs  coinbase_connection.rs  coinbase_ws.rs  data_handler.rs  feed.rs  handler.rs  handlers.rs  lobby.rs  methods.rs  mod.rs  start_connection.rs  websocket_feed.rs  ws.rs
src/coinbase/api/: http.rs  mod.rs  subscribe.rs  websocket.rs
src/coinbase/handlers/: connect.rs  subscribe.rs
src/coinbase/jwt/: mod.rs  private_key.rs  token.rs
src/controller/: order_book_controller.rs  status_controller.rs  websocket_controller.rs
src/marketdata/: mod.rs  order_book.rs
src/websocket/: connection.rs  handlers.rs  market_data_handler.rs  message_handler.rs  mod.rs
src/websocket/handlers/: get_order_book.rs  get_top_of_the_book.rs  mod.rs  text.rs
tests/: coinbase_api_integration_test.rs  common.rs
tests/resources/: coinbase_msg_0.json  coinbase_msg_1.json  coinbase_msg_2.json  snapshot.json  update.json
