[package]
name = "coinbase-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
awc = { version = "3.4.0", features = ["openssl"] }
actix = "0.13"
actix-rt = "2.9.0"
actix-web = { version = "4", feature = ["openssl"] }
actix-web-actors = "4"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
futures-util = "0.3.30"
openssl = "0.10.64"
#rustls = "0.23.3"