[package]
name = "coinbase-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-codec = "0.5.2"
actix-http = "3"
actix-rt = "2.9.0"
actix-web = { version = "4", feature = ["openssl"] }
actix-web-actors = "4"
awc = { version = "3.4.0", features = ["openssl"] }
bigdecimal = { version = "0.4.3"}
bytestring = "1.3.1"
chrono = { version = "0.4", features = ["unstable-locales"] }
derivative = "2.2.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
hex = "0.4.3"
jwtk = "0.3.0"
openssl = "0.10.64"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
futures = "0.3.30"
log = "0.4.21"
